CSS/level retrieval updates

--- a/views/game.html
+++ b/views/game.html
@@ -21,7 +21,7 @@
 
 		#game-screen {
 			margin:auto;
-			top: 30px;
+			top: 0px;
 			left: 0;
 			bottom: 0;
 			right: 0;
@@ -62,8 +62,8 @@
 		}
 
 		#overlay {
-			width: 100vw;
-			height: 100vh;
+			width: 100%;
+			height: 100%;
 			position: absolute;
 			background: rgba(0, 0, 0, 0.7);
 			z-index: 100;
@@ -89,7 +89,7 @@
 
 		.container {
 			position: relative;
-			top: 10vh;
+			top: 3vh;
 		}
 
 		#textpanel {
@@ -131,7 +131,7 @@
 <body>
 	<div id="overlay">
 		<div class="row">
-			<div class="">
+			<div class="" style="">
 				<img src="assets/title_banner.png" style="width: 30vw; display:block; margin:auto;" />
 				<br/>
 				<div id="menubpanel">
@@ -144,11 +144,9 @@
 					<h2>
 						Tile Trail was built using Crafty.js and HTML5 Canvas.
 						<br/>
+						The game includes a map builder that helps users create their own levels and add them to the game database. The game will automatically let you know if your map is valid and solvable. Additionally the game will rank your map in difficulty based on the time taken to prove its solvability. 
 						<br/>
-						The game includes a map builder that helps users create their own levels and add them to the game database. The game will automatically let you know if your map is valid and solvable. Additionally the game will rank you map in difficulty based on the time taken to prove its solvability. 
-						<br/>
-						<br/>
-						<h2 style="text-align:center;"<br/><a href="https://www.merctron.com">>Author: Murtuza Kainan</a></h2>
+						<h2 style="text-align:center;"<br/><a href="https://www.merctron.com">Author: Murtuza Kainan</a></h2>
 						<br/>
 						
 					</h2>
