Fix level loading

--- a/views/game.html
+++ b/views/game.html
@@ -137,7 +137,7 @@
 				<div id="menubpanel">
 					<button id="playb" type="button" class="btn">PLAY NOW</button>
 					<button id="buildb" type="button" class="btn">BUILD A MAP</button>
-					<!--<button id="levelb" type="button" class="btn">SELECT LEVEL</button>-->
+					<button id="levelb" type="button" class="btn">SELECT LEVEL</button>
 					<button id="aboutb" type="button" class="btn">ABOUT</button>
 				</div>
 				<div id="textpanel" style="display:none;"> 
